--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
                 <h3 class="header">EDUCATION</h3>
                 <hr id="underline">
                 <h5 class="header">BANCHELOR OF ENGINEERING</h5>
-                <p class="info" style="margin-top: -5px"><i>(2019-Present)</i></p>
+                <p class="info" style="margin: -5px 0px 0px 10px"><i>(2019-Present)</i></p>
                 <p class="info"><span class="pinkTxt">VAASA UNIVERSITY OF APPLIED SCIENCES</span><span class="grayTxt"> - Vaasa, Finland.</span></p>
                 <p class="info grayTxt"><strong>Major:</strong> Software Engineering</p>
                 <p class="info grayTxt"><strong>Grade:</strong> N/A</p>
@@ -73,7 +73,7 @@
 
                 <h5 class="pinkTxt">SELF-LEARN</h5>
                     <p class="info grayTxt">•  Can quickly learn something new if interested.</p>
-                    <p class="info">•  Skill to use Google to search for information effectively.</p>
+                    <p class="info grayTxt">•  Skill to use Google to search for information effectively.</p>
                 
                 <h5 class="pinkTxt">TEAMWORK</h5>
                     <p class="info grayTxt">•  Compliment and encourages my partners to work frequently</p>
