Some more adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div id="container">
             <div id="left-col">
-                <h3 class="header">CONTACT</h3>
+                <h3>CONTACT</h3>
                 <hr id="underline">
                 <div class="infoContainer">
                     <div><img class="icon" src="home.png"></div>
@@ -30,10 +30,10 @@
                     <div class="info">maitran.kuro@gmail.com</div>
                 </div>
                 
-                <h3 class="header">EDUCATION</h3>
+                <h3>EDUCATION</h3>
                 <hr id="underline">
-                <h5 class="header">BANCHELOR OF ENGINEERING</h5>
-                <p class="info" style="margin: -5px 0px 0px 10px"><i>(2019-Present)</i></p>
+                <h5>BANCHELOR OF ENGINEERING</h5>
+                <p class="info" style="margin: -15px 0px 0px -10px"><i>(2019-Present)</i></p>
                 <p class="info"><span class="pinkTxt">VAASA UNIVERSITY OF APPLIED SCIENCES</span><span class="grayTxt"> - Vaasa, Finland.</span></p>
                 <p class="info grayTxt"><strong>Major:</strong> Software Engineering</p>
                 <p class="info grayTxt"><strong>Grade:</strong> N/A</p>
