--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     I'm looking for a job in Mobile Development. Even though I'm just a junior developer, I'm hoping to polish my skills even more through future jobs. </p>
                 
                 
-                <h3>PROJECTS</h3>
+                <h3>ONGOING PROJECTS</h3>
                 <hr id="underline">
-                <h5 class="pinkTxt">POMODORO TRACKER APP</h5>
+                <h4 class="pinkTxt">POMODORO TRACKER APP</h5>
                     <p class="info grayTxt">•  A short TODO app with a timer that runs between 25 minutes work and 5 minutes break.</p>
                     <p class="info grayTxt">•  Helps focus on a certain task with some break time.</p>
                     <p class="info grayTxt">•  Inspiration from <a href="https://pomodoro-tracker.com/" target="_blank" >HERE.</a></p>
@@ -75,12 +75,19 @@
                     </div>
                  <!--   <p class="info grayTxt">What I can do more:</p> ??-->
 
-                 <h5 class="pinkTxt">MOVIE BROWSER APP</h5>
+                 <h4 class="pinkTxt">MOVIE BROWSER APP</h5>
                  <p class="info grayTxt">•  A movie browser that lets you search for information about a specific movie/series.</p>
-                 <p class="info grayTxt">•  Incompleted project.</p>
                  <div class="infoContainer">
-                     <img id="projectpic" src="./projects/P2_1.jpg" alt="Project 1">
-                     <img id="projectpic" src="./projects/P2_2.jpg" alt="Project 1">
+                     <img id="projectpic" src="./projects/P2_1.jpg" alt="Project 2">
+                     <img id="projectpic" src="./projects/P2_2.jpg" alt="Project 2">
+                 </div>
+
+                 <h4 class="pinkTxt">CONTACTS APP</h5>
+                 <p class="info grayTxt">•  A simple contacts app that display the contact information and allow you to add new contact.</p>
+                 <div class="infoContainer">
+                     <img id="projectpic" src="./projects/P3_1.jpg" alt="Project 3">
+                     <img id="projectpic" src="./projects/P3_2.jpg" alt="Project 3">
+                     <img id="projectpic" src="./projects/P3_3.jpg" alt="Project 3">
                  </div>
 
             </div>
