Added some more information and fixed the layout

--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
                 <p class="info grayTxt"><strong>Major:</strong> Software Engineering</p>
                <!-- <p class="info grayTxt"><strong>Grade:</strong></p>-->
 
-                <h3>SKILLS</h3>
+                <h3> HOBBIES</h3>
                 <hr id="underline">
-                <p class="info"><span class="pinkTxt">• LANGUAGES:</span>
-                    <span class="grayTxt"> JavaScript, React Native, Redux, C#, HTML, CSS, SQL.</span></p>
-                <p class="info"><span class="pinkTxt">• SOFTWARE TOOLS:</span>
-                    <span class="grayTxt"> Visual Studio, Visual Studio Code, Git, GitHub.</span></p>
+                <p class="info"><span class="grayTxt">• Mobile app development</span></p>
+                <p class="info"><span class="grayTxt">• Game development</span></p>
+
+                <h3> LANGUAGES</h3>
+                <hr id="underline">
+                <p class="info"><span class="grayTxt">• English (fluent)</span></p>
+                <p class="info"><span class="grayTxt">• Vietnamese (native)</span></p>
+                <p class="info"><span class="grayTxt">• Finnish (elementary)</span></p>
 
                 <h3> REFERENCES</h3>
                 <hr id="underline">
@@ -57,21 +61,53 @@
                 <h3>SUMMARY</h3>
                 <hr id="underline">
                 <p id="summaryText">I'm an undergraduate IT student at Vaasa University of Applied Sciences who's focusing on learning
-                     React Native JS as my main programming language. By creating many small projects for myself to work on, 
+                     React Native JS for mobile app development. By creating many small projects for myself to work on, 
                     I'm developing my knowledge even further on React Native, while also trying to learn some other languages such as HTML, CSS. 
                     Through the projects, I'm also hoping to practice my soft skills: the ability to work for long hours without losing enthusiasm, and
                      the mentality of being able to work under pressure.</p>
-                <p id="summaryText">After going through Steerpath's products, I think this is a chance for me to learn even more by 
+            <!--    <p id="summaryText">After going through Steerpath's products, I think this is a chance for me to learn even more by 
                     involving and dedicating myself to work with the company. I'm more comfortable with frontend mobile development, 
                     and even though I do not yet have a strong background on working with data, 
-                    through practicing and helping to solve challenges with your company, I'm sure I will be able to enhance my knowledge on the subject. </p>
-                                
+                    through practicing and helping to solve challenges with your company, I'm sure I will be able to enhance my knowledge on the subject. </p>-->
+
+                <h3>SKILLS</h3>
+                <hr id="underline">
+                <div id="grid-container">
+                    <div id="grid-item1">
+                        <h4 class="pinkTxt">LANGUAGES</h4>
+                            <ul class="grayTxt">
+                                <li>Java</li>
+                                <li>JavaScript</li>
+                                <li>C#</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>SQL</li>
+                            </ul>
+                    </div>
+                    <div id="grid-item2">
+                        <h4 class="pinkTxt">FRAMEWORK</h4>
+                            <ul class="grayTxt">
+                                <li>React Native</li>
+                                <li>Redux</li>
+                            </ul>
+                    </div>
+                    <div id="grid-item3">
+                        <h4 class="pinkTxt">SOFTWARE TOOLS</h4>
+                            <ul class="grayTxt">
+                                <li>Visual Studio (Code)</li>
+                                <li>Git</li>
+                                <li>Github</li>
+                            </ul>
+                    </div>
+                </div>               
                 <h3>ONGOING PROJECTS</h3>
                 <hr id="underline">
-                <h4 class="pinkTxt">POMODORO TRACKER APP</h5>
-                    <p class="info grayTxt">•  A short TODO app with a timer that runs between 25 minutes work and 5 minutes break.</p>
-                    <p class="info grayTxt">•  Helps focus on a certain task with some break time.</p>
-                    <p class="info grayTxt">•  Inspiration from <a href="https://pomodoro-tracker.com/" target="_blank" >HERE.</a></p>
+                <h4 class="pinkTxt">POMODORO TRACKER APP</h4>
+                    <ul>
+                        <li class="grayTxt">A short TODO app with a timer that runs between 25 minutes work and 5 minutes break.</li>
+                        <li class="grayTxt">Helps focus on a certain task with some break time.</li>
+                        <li class="grayTxt">Inspiration from <a href="https://pomodoro-tracker.com/" target="_blank" >HERE.</a></li>
+                    </ul>
                     <div class="pictureContainer">
                         <img id="projectpic" src="./projects/P1_1.jpg" alt="Project 1">
                         <img id="projectpic" src="./projects/P1_2.jpg" alt="Project 1">
@@ -79,8 +115,8 @@
                     </div>
                  <!--   <p class="info grayTxt">What I can do more:</p> ??-->
 
-                <h4 class="pinkTxt">CONTACTS APP</h5>
-                <p class="info grayTxt">•  A simple contacts app that display the contact information and allow you to add new contact.</p>
+                <h4 class="pinkTxt">CONTACTS APP</h4>
+                <li class="grayTxt">A simple contacts app that display the contact information and allow you to add new contact.</li>
                 <div class="pictureContainer">
                     <img id="projectpic" src="./projects/P3_1.jpg" alt="Project 3">
                     <img id="projectpic" src="./projects/P3_2.jpg" alt="Project 3">
@@ -91,7 +127,4 @@
         </div>
     </div>
 </body>
-
-
-
 </html>
