Fixed some typos, restructured the cv

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <h3>CONTACT</h3>
                 <hr id="underline">
                 <div class="infoContainer">
-                    <div><img class="icon" src="home.png"></div>
+                    <div><img class="icon" src="./assets/home.png"></div>
                     <div class="contactInfo grayTxt">Konepajakatu 9 Q23, Vaasa, Finland</div>
                 </div>
                 <div class="infoContainer">
-                    <div><img class="icon" src="phone.png"></div>
-                    <div class="contactInfo grayTxt">+358 46 6804395</div>
+                    <div><img class="icon" src="./assets/phone.png"></div>
+                    <div class="contactInfo grayTxt">+358 46 680 4395</div>
                 </div>
                 <div class="infoContainer">
-                    <div><img class="icon" src="mail.png"></div>
+                    <div><img class="icon" src="./assets/mail.png"></div>
                     <div class="contactInfo grayTxt">maitran.ln99@gmail.com</div>
                 </div>
                 
@@ -43,7 +43,7 @@
                 <h3> HOBBIES</h3>
                 <hr id="underline">
                 <ul class="otherInfo grayTxt">
-                <li>Mobile app development</li>
+                <li>Mobile application development</li>
                 <li>Game development</li>
                 <li>IoT</li>
                 </ul>
@@ -67,10 +67,10 @@
             <div id="right-col">
                 <h3>SUMMARY</h3>
                 <hr id="underline">
-                <p id="summaryText" class="grayTxt">I'm an undergraduate IT student at Vaasa University of Applied Sciences who's focusing on 
+                <p id="summaryText" class="grayTxt">I am an undergraduate IT student at Vaasa University of Applied Sciences focusing on 
                     learning React Native JS for frontend mobile development. By creating many small projects for myself to work on, 
-                    I'm developing my knowledge even further on React Native, while also trying to learn some other languages such as HTML, CSS. 
-                    Through the projects, I'm also hoping to practice my soft skills: the ability to work for long hours without losing enthusiasm, and
+                    I am developing my knowledge even further on React Native, while also trying to learn some other languages such as HTML, CSS. 
+                    Through the projects, I also wish to practice my soft skills: the ability to work for long hours without losing enthusiasm, and
                     the mentality of being able to work under pressure.</p>
             <!--    <p id="summaryText">After going through Steerpath's products, I think this is a chance for me to learn even more by 
                     involving and dedicating myself to work with the company. I'm more comfortable with frontend mobile development, 
@@ -109,42 +109,26 @@
                 </div>               
                 <h3>ONGOING PROJECTS</h3>
                 <hr id="underline">
-                <h4 class="pinkTxt">POMODORO TRACKER APP</h4>
+                <h4 class="pinkTxt">POMODORO TRACKER APPLICATION</h4>
                     <ul class="grayTxt">
-                        <li>A short TODO app with a timer that runs between 25 minutes work and 5 minutes break.</li>
+                        <li>A short TODO application with a timer that runs between 25 minutes work and 5 minutes break.</li>
                         <li>Helps focus on a certain task with some break time.</li>
                         <li>Inspiration from <a href="https://pomodoro-tracker.com/" target="_blank" >HERE.</a></li>
+                        <li><a href="https://github.com/MaiTrn/TODOApp">Source code</a></li>
                     </ul>
-                    <div class="pictureContainer">
-                        <img id="projectpic" src="./projects/P1_1.jpg" alt="Project 1">
-                        <img id="projectpic" src="./projects/P1_2.jpg" alt="Project 1">
-                        <img id="projectpic" src="./projects/P1_3.jpg" alt="Project 1">
-                    </div>
-                 <!--   <p class="otherInfo grayTxt">What I can do more:</p> ??-->
 
-                <h4 class="pinkTxt">FASHION PLATFORM APP</h4>
+                <h4 class="pinkTxt">FASHION PLATFORM APPLICATION</h4>
                 <ul class="grayTxt">
-                    <li>A simple fashion app that has many feature: browse for outfits, save/remove favourite outfits.</li>
+                    <li>A simple fashion application that has many feature: browse for outfits, save and remove favourite outfits.</li>
                     <li>A hobby project that mainly focuses on the UI.</li>
+                    <li><a href="https://github.com/MaiTrn/FashionApp">Source code</a></li>
                 </ul>
-                <div class="pictureContainer">
-                    <img id="projectpic" src="./projects/P2_4.jpg" alt="Project 2">
-                    <img id="projectpic" src="./projects/P2_1.jpg" alt="Project 2">
-                    <img id="projectpic" src="./projects/P2_2.jpg" alt="Project 2">
-                    <img id="projectpic" src="./projects/P2_3.jpg" alt="Project 2">
-                </div>
-
-                <h4 class="pinkTxt">EXPENSE TRACKER APP</h4>
+                <h4 class="pinkTxt">EXPENSE TRACKER APPLICATION</h4>
                 <ul class="grayTxt">
-                    <li>An expense tracker app that lets you add and monitor your expenses.</li>
+                    <li>An expense tracker application that lets you add and monitor your expenses.</li>
                     <li>Has pending expenses and confirmed expenses.</li>
+                    <li><a href="https://github.com/MaiTrn/ExpenseTracker">Source code</a></li>
                 </ul>
-                <div class="pictureContainer">
-                    <img id="projectpic" src="./projects/P3_1.jpg" alt="Project 3">
-                    <img id="projectpic" src="./projects/P3_2.jpg" alt="Project 3">
-                    <img id="projectpic" src="./projects/P3_3.jpg" alt="Project 3">
-                </div>
-
             </div>
         </div>
     </div>
