--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/1979d3a78f.js" crossorigin="anonymous"></script>
     <title>Mai Tran</title>
 </head>
 
@@ -19,26 +20,31 @@
                 <h3>CONTACT</h3>
                 <hr id="underline">
                 <div class="infoContainer">
-                    <div><img class="icon" src="./assets/home.png"></div>
+                    <div class="icon fas fa-home"></div>
                     <div class="contactInfo grayTxt">Konepajakatu 9 Q23, Vaasa, Finland</div>
                 </div>
                 <div class="infoContainer">
-                    <div><img class="icon" src="./assets/phone.png"></div>
+                    <div class="icon fas fa-phone-alt"></div>
                     <div class="contactInfo grayTxt">+358 46 680 4395</div>
                 </div>
                 <div class="infoContainer">
-                    <div><img class="icon" src="./assets/mail.png"></div>
+                    <div class="icon fas fa-envelope"></div>
                     <div class="contactInfo grayTxt">maitran.ln99@gmail.com</div>
                 </div>
                 
                 <h3>EDUCATION</h3>
                 <hr id="underline">
                 <p><span class="pinkTxt">VAASA UNIVERSITY OF APPLIED SCIENCES</span><span class="grayTxt"> - Vaasa, Finland.</span></p>
-                <p class="otherInfo grayTxt" style="margin-top: -15px;"><i>(2019-Present)</i></p>
+                <p class="otherInfo grayTxt" style="margin-top: -15px;"><em>(2019-Present)</em></p>
                 <p class="otherInfo grayTxt"><strong>Degree Programme:</strong> Information Technology</p>
                 <p class="otherInfo grayTxt"><strong>Degree:</strong> Bachelor of Engineering</p>
-                <p class="otherInfo grayTxt"><strong>Major:</strong> Software Engineering</p>
-               <!-- <p class="otherInfo grayTxt"><strong>Grade:</strong></p>-->
+
+               <p><span class="pinkTxt">DEPARTMENT OF COMPUTER SCIENCE AT UNIVERSITY OF HELSINKI</span></p>
+               <p class="otherInfo grayTxt" style="margin-top: -15px;"><em>(2021-2022)</i></em>
+               <p class="otherInfo grayTxt"><strong>Course:</strong> Full Stack Open</p>
+               <p class="otherInfo grayTxt"><strong>Certificate:</strong> <a href="https://studies.cs.helsinki.fi/stats/api/certificate/fullstackopen/en/bb43d6ef21dbcc80846585bda51908f2"  target="_blank">
+                   Full stack Web development
+                </a></p>
 
                 <h3> HOBBIES</h3>
                 <hr id="underline">
@@ -107,28 +113,42 @@
                             </ul>
                     </div>
                 </div>               
-                <h3>ONGOING PROJECTS</h3>
+                <h3>PROJECTS</h3>
                 <hr id="underline">
                 <h4 class="pinkTxt">POMODORO TRACKER APPLICATION</h4>
                     <ul class="grayTxt">
                         <li>A short TODO application with a timer that runs between 25 minutes work and 5 minutes break.</li>
                         <li>Helps focus on a certain task with some break time.</li>
                         <li>Inspiration from <a href="https://pomodoro-tracker.com/" target="_blank" >HERE.</a></li>
-                        <li><a href="https://github.com/MaiTrn/TODOApp">Source code</a></li>
                     </ul>
+                    <div class="pictureContainer">
+                        <img id="projectpic" src="./projects/P1_1.jpg" alt="Project 1">
+                        <img id="projectpic" src="./projects/P1_2.jpg" alt="Project 1">
+                        <img id="projectpic" src="./projects/P1_3.jpg" alt="Project 1">
+                    </div>
 
                 <h4 class="pinkTxt">FASHION PLATFORM APPLICATION</h4>
                 <ul class="grayTxt">
                     <li>A simple fashion application that has many feature: browse for outfits, save and remove favourite outfits.</li>
                     <li>A hobby project that mainly focuses on the UI.</li>
-                    <li><a href="https://github.com/MaiTrn/FashionApp">Source code</a></li>
                 </ul>
+                <div class="pictureContainer">
+                    <img id="projectpic" src="./projects/P2_4.jpg" alt="Project 2">
+                    <img id="projectpic" src="./projects/P2_1.jpg" alt="Project 2">
+                    <img id="projectpic" src="./projects/P2_2.jpg" alt="Project 2">
+                    <img id="projectpic" src="./projects/P2_3.jpg" alt="Project 2">
+                </div>
+
                 <h4 class="pinkTxt">EXPENSE TRACKER APPLICATION</h4>
                 <ul class="grayTxt">
                     <li>An expense tracker application that lets you add and monitor your expenses.</li>
                     <li>Has pending expenses and confirmed expenses.</li>
-                    <li><a href="https://github.com/MaiTrn/ExpenseTracker">Source code</a></li>
                 </ul>
+                <div class="pictureContainer">
+                    <img id="projectpic" src="./projects/P3_1.jpg" alt="Project 3">
+                    <img id="projectpic" src="./projects/P3_2.jpg" alt="Project 3">
+                    <img id="projectpic" src="./projects/P3_3.jpg" alt="Project 3">
+                </div>
             </div>
         </div>
     </div>
