--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
             <div id="right-col">
                 <h3>SUMMARY</h3>
                 <hr id="underline">
-                <p id="summaryText" class="grayTxt">I am an undergraduate IT student at Vaasa University of Applied Sciences focusing on 
-                    learning React Native JS for frontend mobile development. By creating many small projects for myself to work on, 
-                    I am developing my knowledge even further on React Native, while also trying to learn some other languages such as HTML, CSS. 
+                <p id="summaryText" class="grayTxt">I am an undergraduate IT student at Vaasa University of Applied Sciences focusing on learning React Native JS for frontend mobile development. 
+                    Through many small hobby projects, I am developing my knowledge on React Native consistently while also trying to learn some other languages such as HTML, CSS. 
                     Through the projects, I also wish to practice my soft skills: the ability to work for long hours without losing enthusiasm, and
                     the mentality of being able to work under pressure.</p>
             <!--    <p id="summaryText">After going through Steerpath's products, I think this is a chance for me to learn even more by 
