--- a/index.html
+++ b/index.html
@@ -39,13 +39,6 @@
                 <p class="otherInfo grayTxt"><strong>Degree Programme:</strong> Information Technology</p>
                 <p class="otherInfo grayTxt"><strong>Degree:</strong> Bachelor of Engineering</p>
 
-               <p><span class="pinkTxt">DEPARTMENT OF COMPUTER SCIENCE AT UNIVERSITY OF HELSINKI</span></p>
-               <p class="otherInfo grayTxt" style="margin-top: -15px;"><em>(2021-2022)</i></em>
-               <p class="otherInfo grayTxt"><strong>Course:</strong> Full Stack Open</p>
-               <p class="otherInfo grayTxt"><strong>Certificate:</strong> <a href="https://studies.cs.helsinki.fi/stats/api/certificate/fullstackopen/en/bb43d6ef21dbcc80846585bda51908f2"  target="_blank">
-                   Full stack Web development
-                </a></p>
-
                 <h3> HOBBIES</h3>
                 <hr id="underline">
                 <ul class="otherInfo grayTxt">
@@ -67,7 +60,17 @@
                 <p class="otherInfo"><span class="pinkTxt">GITHUB:</span>
                     <a href="https://github.com/MaiTrn" target="_blank" >
                         https://github.com/MaiTrn
-                    </a> </p>
+                    </a> 
+		        </p>
+               <p class="otherInfo">
+		            <span class="pinkTxt">Full Stack Open Certificate:</span><br/>
+                    <a id="indent" href="https://studies.cs.helsinki.fi/stats/api/certificate/fullstackopen/en/bb43d6ef21dbcc80846585bda51908f2"  target="_blank">
+                        Full stack Web development
+                    </a><br/>
+                    <a id="indent" href="https://studies.cs.helsinki.fi/stats/api/certificate/fs-react-native-2020/en/49904920775a9a8a240f2875cc19a346"  target="_blank">
+                        React Native Mobile development
+                    </a>
+                </p>
                 
             </div>
             <div id="right-col">
@@ -101,6 +104,7 @@
                             <ul class="grayTxt">
                                 <li>React Native</li>
                                 <li>Redux</li>
+				<li>React</li>
                             </ul>
                     </div>
                     <div id="grid-item3">
