--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <p class="otherInfo grayTxt" style="margin-top: -15px;"><em>(2019-Present)</em></p>
                 <p class="otherInfo grayTxt"><strong>Degree Programme:</strong> Information Technology</p>
                 <p class="otherInfo grayTxt"><strong>Degree:</strong> Bachelor of Engineering</p>
+		<p class="otherInfo grayTxt"><strong>Grade:</strong> 4.5</p>
 
                 <h3> HOBBIES</h3>
                 <hr id="underline">
