--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                     <div id="grid-item1">
                         <h4 class="pinkTxt">LANGUAGES</h4>
                             <ul class="grayTxt">
-                                <li>JavaScript</li>
-                                <li>C#</li>
+                                <li>Javascript</li>
+                                <li>Typescript</li>
                                 <li>HTML</li>
                                 <li>CSS</li>
-                                <li>SQL</li>
+                                <li>GraphQL</li>
+                                <li>C#</li>
                                 <li>Java</li>
                             </ul>
                     </div>
@@ -104,8 +105,10 @@
                         <h4 class="pinkTxt">FRAMEWORK</h4>
                             <ul class="grayTxt">
                                 <li>React Native</li>
+				                <li>React</li>
                                 <li>Redux</li>
-				<li>React</li>
+                                <li>Cypress</li>
+                                <li>Jest</li>
                             </ul>
                     </div>
                     <div id="grid-item3">
@@ -114,6 +117,13 @@
                                 <li>Visual Studio (Code)</li>
                                 <li>Git</li>
                                 <li>Github</li>
+                            </ul>
+                    </div>
+                    <div id="grid-item4">
+                        <h4 class="pinkTxt">DATABASES</h4>
+                            <ul class="grayTxt">
+                                <li>MongoDB</li>
+                                <li>Firebase</li>
                             </ul>
                     </div>
                 </div>               
