--- a/index.html
+++ b/index.html
@@ -90,15 +90,19 @@
                 <hr id="underline">
                 <div id="grid-container">
                     <div id="grid-item1">
-                        <h4 class="pinkTxt">LANGUAGES</h4>
-                            <ul class="grayTxt">
-                                <li>Javascript</li>
-                                <li>Typescript</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>GraphQL</li>
-                                <li>C#</li>
-                                <li>Java</li>
+                        <h4 class="pinkTxt" >LANGUAGES</h4>
+                            <ul class="grayTxt" id="language-container">
+                                <div  id="grid-item1">
+                                    <li>Javascript</li>
+                                    <li>Typescript</li>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                </div>
+                                <div  id="grid-item2">
+                                    <li>GraphQL</li>
+                                    <li>C#</li>
+                                    <li>Java</li>
+                                </div>
                             </ul>
                     </div>
                     <div id="grid-item2">
